// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookings page should execute getServerSideProps with de locale 1`] = `
{
  "redirect": {
    "destination": "/auth/login?returnTo=undefined",
    "permanent": false,
  },
}
`;

exports[`Bookings page should execute getServerSideProps with gb locale 1`] = `
{
  "redirect": {
    "destination": "/auth/login?returnTo=undefined",
    "permanent": false,
  },
}
`;

exports[`Bookings page should match the snapshot 1`] = `
<div>
  <div
    data-testid="confirmation"
  />
</div>
`;

exports[`Bookings page should match the snapshot layout 1`] = `
<div>
  <div
    data-testid="BookingsLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="confirmation"
      />
    </div>
  </div>
</div>
`;
